--- a/admin/development/未完成.md
+++ b/admin/development/未完成.md
@@ -15,10 +15,8 @@ v_更新config
 ## user
 下載產品資料至本地，儲存為檔案 (親格式)
 
-以編輯器開啟(親格式)，sublime儲存
+編輯：以編輯器開啟(親格式)，sublime儲存
+檢查：檢查產品資料
+上傳至預覽版：上傳(親格式與電腦格式json前端資料)
+發佈：預覽版發佈為正式版，可做權限
 
-檢查產品資料
-
-上傳(親格式與電腦格式json前端資料)
-
-使用瀏覽器預覽 webapp 超連結
